changes in sbcl-0.8.22 relative to sbcl-0.8.21:
  * fixed inference of the upper bound of an iteration variable.
    (reported by Rajat Datta).
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** MISC.549 and similar: late transformation of unsafe type
       assertions into derived types caused unexpected code
       transformations.

changes in sbcl-0.8.21 (0.9alpha.1?) relative to sbcl-0.8.20:
  * incompatible change: thread support for non-NPTL systems has
    been removed - locking is buggy and unreliable.  A threaded 
    SBCL build will now warn at startup and refuse to create
    new threads, unless futex support is detected in the kernel
  * incompatible change: the top level REPL now has only an ABORT
    restart associated with it, not TOPLEVEL and ABORT as it used to.
    TOP and TOPLEVEL are now available as debugger commands for 
    returning to the top level.
  * incompatible change: forms evaluated in the REPL now use the
    global optimization policy.
  * incompatible change: user- and system-initialization files are
    no longer processed with LOAD, but by READ and EVAL; hence the
    global optimization policy, startup package, readtable, etc, 
    can be set by them.
  * The .fasl file format number has been incremented because of 
    various incompatible changes.
  * internal entry point details and argument counts no longer appear
    in backtraces unless explicitly requested by setting
    SB-DEBUG:*SHOW-ENTRY-POINT-DETAILS*.
  * built-in and standard functions no longer have names like "top
    level local call to FOO".
  * fixed bug 32: functions defined in non-null lexical environments
    now have more legible printed representation
  * fixed bug 33: functions defined in non-null lexical environemnts
    are now more amenable to inspection by INSPECT.
  * workaround for bug 354: XEPs no longer appear in backtraces unless
    explicitly requested.
  * fixed bug: receiving the signal which results from attempting to